Correctifs contrastes

--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ a:hover {
 
 .bloc-lg {
     padding: 100px 50px;
+    position: relative;
+    z-index: +1;
 }
 
 .bloc-md {
@@ -54,6 +56,7 @@ a:hover {
 
 .bloc-sm {
     padding: 20px 50px;
+
 }
 
 .bg-center,
@@ -88,6 +91,7 @@ a:hover {
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 0;
 }
 
 .texture-paper::before {
@@ -775,24 +779,24 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #f96e2e;
+    background-color: #fa580d;
 }
 
 .tc-white {
-    color: #f96e2e!important;
+    color: #fa580d!important;
 }
 
 .tc-white-contact {
-    color: #f8a781!important;
+    color: #fb9465!important;
 }
 
 .btn-atomic-tangerine {
-    background: #f96e2e;
+    background: #fa580d;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #f8a781!important;
+    background: #fb9465!important;
     color: #FFFFFF!important;
 }
 
@@ -805,11 +809,11 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #f96e2e!important;
+    color: #fa580d!important;
 }
 
 .ltc-atomic-tangerine:hover {
-    color: #f8a781!important;
+    color: #fb9465!important;
 }
 
 .icon-dark-slate-blue {
@@ -989,6 +993,7 @@ h4 {
     .bloc-xl,
     .bloc-lg {
         padding: 40px 0;
+        z-index: 0;
     }
     .bloc-sm,
     .bloc-md {
